add a uniform invocation method for all extraction refactorings
Adds the “Extract… Alt + Cmd + E” action to the refactoring menu which
gives access to the following refactorings:

- Extract Value
- Extract Method
- Extract Parameter
- Extract Extractor

After invocation “Extract…” collects all applicable extractions based
on the currently selected code. In order to reduce the number of
proposed extractions, “Extract…” analyses the selected code for side
effects. If it assumes the code triggers side effects, it prefers
method extractions over value extractions if the according target scope
allows both.

Known limitations:
- Detection of side effects currently uses a relatively simple
heuristic that may lead to impracticable proposals
- Currently no integration in quick assist menu

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -1179,6 +1179,19 @@
             </enablement>
          </action>
          <action
+               class="org.scalaide.refactoring.internal.extract.AutoExtractAction"
+               definitionId="org.scalaide.refactoring.command.Extract"
+               id="org.scalaide.refactoring.extractAction"
+               label="Extract..."
+               menubarPath="scala.tools.eclipse.refactoring.refactoringMenu/scala.tools.eclipse.refactoring.codeExtractionGroup"
+               tooltip="Extract...">
+            <enablement>
+               <objectClass
+                     name="org.eclipse.jface.text.TextSelection">
+               </objectClass>
+            </enablement>
+         </action>
+         <action
                class="org.scalaide.ui.internal.actions.RunSelectionAction"
                definitionId="scala.tools.eclipse.interpreter.RunSelection"
                disabledIcon="icons/full/dtool16/run_interpreter.gif"
@@ -1272,6 +1285,10 @@
          id="org.scalaide.refactoring.command.ExtractExtractor"
          name="Extract Extractor"/>
       <command
+         categoryId="scala.tools.eclipse.refactoring.commands.codeextraction"
+         id="org.scalaide.refactoring.command.Extract"
+         name="Extract..."/>
+      <command
          categoryId="scala.tools.eclipse.category"
          id="org.scala-ide.sdt.core.commands.ToggleImplicitsDisplay"
          name="Toggle Implicits Display"/>         
@@ -1347,6 +1364,11 @@
    		 schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
    		 contextId="scala.tools.eclipse.scalaEditorScope"
    		 sequence="M2+M3+R"/>
+   <key
+   		 commandId="org.scalaide.refactoring.command.Extract"
+   		 schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+   		 contextId="scala.tools.eclipse.scalaEditorScope"
+   		 sequence="M2+M3+E"/>
    <key
          commandId="scala.tools.eclipse.editor.ShowTypeOfSelection"
          contextId="scala.tools.eclipse.scalaEditorScope"
