--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -470,7 +470,7 @@
    <extension point="org.eclipse.debug.core.statusHandlers">
    <statusHandler
       id="Xsource"
-      class="org.scalaide.ui.internal.diagnostic.ClasspathErrorPromptStatusHandler"
+      class="org.scalaide.ui.internal.handlers.ClasspathErrorPromptStatusHandler"
       plugin="org.scala-ide.sdt.core"
       code="1001">
    </statusHandler>
