--- a/org.scala-ide.scala211.build/pom.xml
+++ b/org.scala-ide.scala211.build/pom.xml
@@ -19,6 +19,7 @@
     <scala.binary.version>2.11</scala.binary.version>
     <scala-xml.version>1.0.1</scala-xml.version>
     <scala-parser-combinators.version>1.0.1</scala-parser-combinators.version>
+    <scala-swing.version>1.0.1</scala-swing.version>
   </properties>
 
   <dependencies>
@@ -56,15 +57,69 @@
       <version>${scala-parser-combinators.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-swing_${scala.binary.version}</artifactId>
+      <version>${scala-swing.version}</version>
+    </dependency>
+    <!-- sbt interface -->
+    <dependency>
       <groupId>org.scala-ide</groupId>
       <artifactId>org.scala-ide.sbt.compiler.interface</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <!-- sources -->
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala.version}</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-reflect</artifactId>
+      <version>${scala.version}</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-compiler</artifactId>
+      <version>${scala.version}</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-actors</artifactId>
+      <version>${scala.version}</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-xml_${scala.binary.version}</artifactId>
+      <version>${scala-xml.version}</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-parser-combinators_${scala.binary.version}</artifactId>
+      <version>${scala-parser-combinators.version}</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-swing_${scala.binary.version}</artifactId>
+      <version>${scala-swing.version}</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-ide</groupId>
+      <artifactId>org.scala-ide.sbt.compiler.interface.source</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
 
   <modules>
     <module>org.scala-ide.scala211.feature</module>
-<!--    <module>org.scala-ide.scala211.source.feature</module> -->
+    <module>org.scala-ide.scala211.source.feature</module>
     <module>org.scala-ide.scala211.update-site</module>
   </modules>
 
